k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: galaxy-web
  labels:
    name: galaxy-web
    purpose: web-applications
